--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
       
         <h2 id="Java单例实现">Java单例实现</h2>
 <p><strong>一、为什么要用单例模式</strong></p>
-<p>当一个类需要用来管理共享资源的时候，我们就只需要一个对象，比方说：线程池、缓存、日志对象等<br>等。如果说制造出了多个实例，就会导致许多问题的产生，例如：程序异常，资源使用过量，结果不一致等等。</p>
+<p>当一个类需要用来管理共享资源的时候，我们就只需要一个对象，比方说：线程池、缓存、日志对象等。如果说制造出了多个实例，就会导致许多问题的产生，例如：程序异常，资源使用过量，结果不一致等。</p>
 <p><strong>二、Java实现单例思想：</strong></p>
 <ol>
 <li>私有构造函数 → 其他类不能实例化一个新的对象。</li>
