--- a/public/index.html
+++ b/public/index.html
@@ -124,10 +124,8 @@
       
         <h2 id="旧博客搬迁至此">旧博客搬迁至此</h2>
 <p>在这里那里写技术总结，发现到最后感觉是零星点点，记账号也是一件特别麻烦的事，找回以前的博客地址，mark如下：</p>
-<ol>
-<li><a href="http://write.blog.csdn.net/postlist" target="_blank">Blog IN CSDN](http://write.blog.csdn.net/postlist</a></li>
-<li><a href="http://my.oschina.net/Yonney" target="_blank">Blog IN Oschina](http://my.oschina.net/Yonney</a></li>
-</ol>
+<p>1.<a href="http://write.blog.csdn.net/postlist" target="_blank">Blog IN CSDN</a></p>
+<p>2.<a href="http://my.oschina.net/Yonney" target="_blank">Blog IN Oschina</a></p>
 
       
     </div>
